# pong

./: CMakeLists.txt
.cache/clangd/index/: globals.hpp.CBE5601C6A3AB110.idx  input.cpp.528D820FC1026E99.idx  input.hpp.D5F1B614184DF267.idx  main.cpp.023CAAB69E7B9D8B.idx  window.cpp.3211998378C3868C.idx  window.hpp.F4C2E5CFEA29DA46.idx
include/: elements.hpp  engine.hpp  globals.hpp  input.hpp  timer.hpp  window.hpp
src/: elements.cpp  engine.cpp  input.cpp  main.cpp  timer.cpp  window.cpp
